scripts/nullness/wpi/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8.txt
../original/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Scenario.java:72: error: (override.return) $$ 6 $$ @FBCBottom @Nullable String $$ @Initialized @NonNull String $$ @Initialized @NonNull Scenario $$ @FBCBottom @Nullable String toString(@Initialized @NonNull Scenario this) $$ @Initialized @NonNull Object $$ @Initialized @NonNull String toString(@Initialized @NonNull Object this) $$ ( 2327, 2333 ) $$ Incompatible return type.
	public String toString()
	       ^
  found   : @FBCBottom @Nullable String
  required: @Initialized @NonNull String
  Consequence: method in @Initialized @NonNull Scenario
    @FBCBottom @Nullable String toString(@Initialized @NonNull Scenario this)
  cannot override method in @Initialized @NonNull Object
    @Initialized @NonNull String toString(@Initialized @NonNull Object this)
../original/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Stack.java:224: error: (dereference.of.nullable) $$ 1 $$ _portagedItems $$ ( 8238, 8252 ) $$ dereference of possibly-null reference _portagedItems
		if ((null != _unit) && !_portagedItems.isEmpty())
		                        ^
../original/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Stack.java:232: error: (dereference.of.nullable) $$ 1 $$ _subStacks $$ ( 8387, 8397 ) $$ dereference of possibly-null reference _subStacks
		if (!_subStacks.isEmpty())
		     ^
../original/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Stack.java:256: error: (override.return) $$ 6 $$ @Initialized @Nullable String $$ @Initialized @NonNull String $$ @Initialized @NonNull Stack $$ @Initialized @Nullable String toString(@Initialized @NonNull Stack this) $$ @Initialized @NonNull Object $$ @Initialized @NonNull String toString(@Initialized @NonNull Object this) $$ ( 9005, 9011 ) $$ Incompatible return type.
	public String toString()
	       ^
  found   : @Initialized @Nullable String
  required: @Initialized @NonNull String
  Consequence: method in @Initialized @NonNull Stack
    @Initialized @Nullable String toString(@Initialized @NonNull Stack this)
  cannot override method in @Initialized @NonNull Object
    @Initialized @NonNull String toString(@Initialized @NonNull Object this)
../original/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Stack.java:258: error: (dereference.of.nullable) $$ 1 $$ _positionLabel $$ ( 9033, 9047 ) $$ dereference of possibly-null reference _positionLabel
		if (!_positionLabel.isEmpty()) return _positionLabel;
		     ^
../original/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Stack.java:262: error: (dereference.of.nullable) $$ 1 $$ _subStacks $$ ( 9137, 9147 ) $$ dereference of possibly-null reference _subStacks
		if (!_subStacks.isEmpty())
		     ^
../original/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Stack.java:264: error: (dereference.of.nullable) $$ 1 $$ _subStacks.get(_subStacks.keySet().toArray()[0]) $$ ( 9173, 9221 ) $$ dereference of possibly-null reference _subStacks.get(_subStacks.keySet().toArray()[0])
			return _subStacks.get(_subStacks.keySet().toArray()[0]).toString();
			                     ^
../original/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Stack.java:364: error: (dereference.of.nullable) $$ 1 $$ _portagedItems $$ ( 11794, 11808 ) $$ dereference of possibly-null reference _portagedItems
		if ((null != _unit) && !_portagedItems.isEmpty())
		                        ^
../original/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Stack.java:396: error: (dereference.of.nullable) $$ 1 $$ _subStacks $$ ( 12875, 12885 ) $$ dereference of possibly-null reference _subStacks
		if ((null == _unit) && !_subStacks.isEmpty())
		                        ^
../original/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Stack.java:457: error: (dereference.of.nullable) $$ 1 $$ _portagedItems $$ ( 14808, 14822 ) $$ dereference of possibly-null reference _portagedItems
		if ((null != _unit) && !_portagedItems.isEmpty() &&
		                        ^
../original/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Stack.java:462: error: (dereference.of.nullable) $$ 1 $$ subStack $$ ( 14933, 14941 ) $$ dereference of possibly-null reference subStack
			subStack.setPositionLabel(_positionLabel);
			^
../original/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Stack.java:516: error: (dereference.of.nullable) $$ 1 $$ _subStacks $$ ( 16514, 16524 ) $$ dereference of possibly-null reference _subStacks
		if ((null == _unit) && !_subStacks.isEmpty() &&
		                        ^
../original/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Stack.java:521: error: (dereference.of.nullable) $$ 1 $$ subStack $$ ( 16629, 16637 ) $$ dereference of possibly-null reference subStack
			subStack.setPositionLabel(_positionLabel);
			^
../original/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/counters/Unit.java:178: error: (dereference.of.nullable) $$ 1 $$ _description $$ ( 6209, 6221 ) $$ dereference of possibly-null reference _description
		return _description.toString();
		       ^
../original/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Game.java:87: error: (dereference.of.nullable) $$ 1 $$ _sides.get(side) $$ ( 2757, 2773 ) $$ dereference of possibly-null reference _sides.get(side)
		    _sides.get(side).addPlayer(name,nationality,entryTurn))
		              ^
../original/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Game.java:108: error: (dereference.of.nullable) $$ 1 $$ _sides.get(side) $$ ( 3297, 3313 ) $$ dereference of possibly-null reference _sides.get(side)
		return _sides.get(side).player(name);
		                 ^
../original/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Game.java:119: error: (dereference.of.nullable) $$ 1 $$ _sides.get(Side.Sides.ALLIES) $$ ( 3481, 3510 ) $$ dereference of possibly-null reference _sides.get(Side.Sides.ALLIES)
		_alliedPlayers.addAll(_sides.get(Side.Sides.ALLIES).playerList());
		                                ^
../original/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Game.java:122: error: (dereference.of.nullable) $$ 1 $$ _sides.get(Side.Sides.AXIS) $$ ( 3573, 3600 ) $$ dereference of possibly-null reference _sides.get(Side.Sides.AXIS)
		_axisPlayers.addAll(_sides.get(Side.Sides.AXIS).playerList());
		                              ^
../original/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/Driver.java:53: error: (dereference.of.nullable) $$ 1 $$ deserializedLeader $$ ( 2343, 2361 ) $$ dereference of possibly-null reference deserializedLeader
        System.out.print(deserializedLeader.toText());
                         ^
../original/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/Driver.java:540: error: (dereference.of.nullable) $$ 1 $$ alliedPlayer $$ ( 19009, 19021 ) $$ dereference of possibly-null reference alliedPlayer
        alliedPlayer.addUnit("9-1 Leader");
        ^
../original/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/Driver.java:547: error: (dereference.of.nullable) $$ 1 $$ axisPlayer $$ ( 19263, 19273 ) $$ dereference of possibly-null reference axisPlayer
        axisPlayer.addUnit("8-1 Leader");
        ^
21 errors
